--- a/web/index.html
+++ b/web/index.html
@@ -1096,9 +1096,19 @@
                                                 <span class="text-sm mt-2 text-muted font-medium">分析</span>
                                             </div>
 
-                                            <!-- 连接线 -->
-                                            <div class="w-24 h-0.5 mb-8 transition-all duration-300"
-                                                 :class="thinkingStage?.stage_index >= 1 ? 'bg-[#357BE2]' : 'bg-[#EDF4FE]'"></div>
+                                            <!-- 点状连接 -->
+                                            <div class="flex items-center gap-3 mb-8">
+                                                <span class="w-1.5 h-1.5 rounded-full"
+                                                      :class="thinkingStage?.stage_index >= 1 ? 'bg-[#357BE2]/60' : 'bg-[#357BE2]/25'"></span>
+                                                <span class="w-1.5 h-1.5 rounded-full"
+                                                      :class="thinkingStage?.stage_index >= 1 ? 'bg-[#357BE2]/60' : 'bg-[#357BE2]/25'"></span>
+                                                <span class="w-1.5 h-1.5 rounded-full"
+                                                      :class="thinkingStage?.stage_index >= 1 ? 'bg-[#357BE2]/60' : 'bg-[#357BE2]/25'"></span>
+                                                <span class="w-1.5 h-1.5 rounded-full"
+                                                      :class="thinkingStage?.stage_index >= 1 ? 'bg-[#357BE2]/60' : 'bg-[#357BE2]/25'"></span>
+                                                <span class="w-1.5 h-1.5 rounded-full"
+                                                      :class="thinkingStage?.stage_index >= 1 ? 'bg-[#357BE2]/60' : 'bg-[#357BE2]/25'"></span>
+                                            </div>
 
                                             <!-- 阶段2: 检索资料 -->
                                             <div class="flex flex-col items-center">
@@ -1111,9 +1121,19 @@
                                                 <span class="text-sm mt-2 text-muted font-medium">检索</span>
                                             </div>
 
-                                            <!-- 连接线 -->
-                                            <div class="w-24 h-0.5 mb-8 transition-all duration-300"
-                                                 :class="thinkingStage?.stage_index >= 2 ? 'bg-[#357BE2]' : 'bg-[#EDF4FE]'"></div>
+                                            <!-- 点状连接 -->
+                                            <div class="flex items-center gap-3 mb-8">
+                                                <span class="w-1.5 h-1.5 rounded-full"
+                                                      :class="thinkingStage?.stage_index >= 2 ? 'bg-[#357BE2]/60' : 'bg-[#357BE2]/25'"></span>
+                                                <span class="w-1.5 h-1.5 rounded-full"
+                                                      :class="thinkingStage?.stage_index >= 2 ? 'bg-[#357BE2]/60' : 'bg-[#357BE2]/25'"></span>
+                                                <span class="w-1.5 h-1.5 rounded-full"
+                                                      :class="thinkingStage?.stage_index >= 2 ? 'bg-[#357BE2]/60' : 'bg-[#357BE2]/25'"></span>
+                                                <span class="w-1.5 h-1.5 rounded-full"
+                                                      :class="thinkingStage?.stage_index >= 2 ? 'bg-[#357BE2]/60' : 'bg-[#357BE2]/25'"></span>
+                                                <span class="w-1.5 h-1.5 rounded-full"
+                                                      :class="thinkingStage?.stage_index >= 2 ? 'bg-[#357BE2]/60' : 'bg-[#357BE2]/25'"></span>
+                                            </div>
 
                                             <!-- 阶段3: 生成问题 -->
                                             <div class="flex flex-col items-center">
